apps/dronolab/wikijs/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dronolab-wikijs-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
    - secretName: wiki-dronolab-tls
      hosts:
        - wiki.dronolab.omni.cedille.club
  rules:
    - host: wiki.dronolab.omni.cedille.club
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: svc-wikijs-dronolab
              port:
                number: 3000
